actix-web-thiserror/tests/compile-fail/status-code-float.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/status-code-float.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: invalid status code
